# Thread-logger

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  threaded_logger.cpp
examples/logging/: CMakeLists.txt  logging.cpp
examples/threadedLogging/: CMakeLists.txt  threadedLogging.cpp
log/: CMakeLists.txt
log/include/: Level.hpp  Properties.hpp
log/include/format/: BaseFormatter.hpp  LogFormatter.hpp
log/include/loggers/: BaseLogger.hpp  FileLogger.hpp  Logger.hpp  StderrLogger.hpp  StdoutLogger.hpp  ThreadedLogger.hpp
log/include/utils/: SafeQueue.hpp
log/src/format/: BaseFormatter.cpp  LogFormatter.cpp
log/src/loggers/: BaseLogger.cpp  FileLogger.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp  ThreadedLogger.cpp
